--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,10 +12,23 @@ stages:
     pool:
       name: MyAgentPool
     steps:
+    - task: Maven@3
+      inputs:
+        mavenPomFile: 'pom.xml'
+        goals: 'clean install'
+        mavenOptions: '-Xmx1024m'
+        options: '--batch-mode'
+        publishJUnitResults: true
+        testResultsFiles: '**/surefire-reports/TEST-*.xml'
+        javaHomeOption: 'JDKVersion'
+        jdkVersionOption: '1.11'
+        mavenVersionOption: 'Default'
+        mavenAuthenticateFeed: true
+
     - script: |
-        echo "##vso[task.setvariable variable=MAVEN_HOME]$(which mvn)"
-        echo "##vso[task.setvariable variable=PATH]$(MAVEN_HOME):$(PATH)"
-      displayName: 'Set Maven Path'
+        echo "##vso[task.setvariable variable=MAVEN_HOME]$(Agent.ToolsDirectory)/maven"
+        echo "##vso[task.setvariable variable=PATH]$(Agent.ToolsDirectory)/maven/bin:$(PATH)"
+      displayName: 'Set MAVEN_HOME and PATH'
 
     - task: Maven@3
       displayName: 'Maven Package'
