--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,3 @@
-# Maven package Java project Web App to Linux on Azure
-# Build your Java project and deploy it to Azure as a Linux web app
-# Add steps that analyze code, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/java
 
 trigger:
 - main
@@ -29,6 +25,22 @@ stages:
       name: MyAgentPool1
 
     steps:
+    - task: Bash@3
+      displayName: 'set up maven enviroment'
+      inputs:
+        targetType: 'inline'
+        script: |
+          echo "##vso[task.setvariable variable=JAVA_HOME]/usr/lib/jvm/default-java" && \
+          echo "##vso[task.setvariable variable=M2_HOME]/usr/share/maven" && \
+          echo "##vso[task.setvariable variable=MAVEN_HOME]/usr/share/maven" && \
+          echo "##vso[task.setvariable variable=PATH]$PATH:/usr/share/maven/bin"
+    - task: Bash@3
+      displayName: 'Add maven to PATH and verify'
+      inputs:
+        targetType: 'inline'
+        script: |
+          echo "##vso[task.setvariable variable=PATH]$(M2_HOME)/bin:$(PATH)"
+          mvn -v
     - task: Maven@3
       displayName: 'Maven Package'
       inputs:
